--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "dervi-filmoteka",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://sigizmunde.github.io/dervi-filmoteka",
+  "homepage": "https://alestrella.github.io/dervi-filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /dervi-filmoteka/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sigizmunde/dervi-filmoteka"
+    "url": "git+https://github.com/alestrella/dervi-filmoteka"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sigizmunde/dervi-filmoteka"
+    "url": "https://github.com/alestrella/dervi-filmoteka"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0",
